--- a/beanstalkd/Dockerfile
+++ b/beanstalkd/Dockerfile
@@ -1,12 +1,8 @@
-FROM ubuntu:18.10
+FROM alpine:3.9
+LABEL maintainer="Abdulloh Charis<me@chars.me>"
 
-ENV DATA_DIR /data
-
-RUN apt-get update -q -y \
-    && apt-get -q -y install beanstalkd \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* \
-    && mkdir -p $DATA_DIR
+RUN apk add --no-cache beanstalkd \
+    && mkdir "/var/data"
 
 EXPOSE 11300
 ENTRYPOINT ["/usr/bin/beanstalkd"]
